--- a/src/App.css
+++ b/src/App.css
@@ -193,3 +193,10 @@
   flex-direction: column;
   gap: .5em;
 }
+
+.experienceDrop .experienceForm {
+  display: flex;
+}
+.experienceDrop .shrunk {
+  display: none;
+}
