--- a/src/ExperienceContent.css
+++ b/src/ExperienceContent.css
@@ -19,8 +19,13 @@
     
 }
 
-.submitJob {
+.submitJob, .cancelJob {
     width: calc(1em + 12.5vw);
+}
+
+.buttonContainer {
+    display: flex;
+    gap: 2em;
 }
 
 /* .experienceDrop > .experienceForm {
