--- a/src/dropdown.css
+++ b/src/dropdown.css
@@ -25,8 +25,9 @@
   
   .dropdownButton {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
+    gap: 1em;
   }
   
   .dropdownButton > .chevron, .dropdownButton > .dropEmpty {
